Kotlin and Compiler version updates